historical notes on mag res

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1118,7 +1118,16 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={1908},
   publisher={Wiley Online Library}
 }
-
+@article{lewin1947electrical,
+  title={The electrical constants of a material loaded with spherical particles},
+  author={Lewin, L},
+  journal={Journal of the Institution of Electrical Engineers-Part III: Radio and Communication Engineering},
+  volume={94},
+  number={27},
+  pages={65--68},
+  year={1947},
+  publisher={IET}
+}
 
 @article{peng2007,
   title={Experimental observation of left-handed behavior in an array of standard dielectric resonators},
