--- a/intro.tex
+++ b/intro.tex
@@ -132,7 +132,8 @@ PhC 		& Photonic crystal\\
 %PML 		& Perfectly matched layers (absorber in simulation)\\
 PWEM 		& Plane-wave expansion method (algorithm)\\
 RHM 		& Right-Handed (Meta)Material\\ 
-SRR			& Split-ring resonator\\			% todo add ESRR?
+SRR			& Split-ring resonator\\		
+sSRR		& Symmetric split-ring resonator\\
 STO			& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
 TDTS 		& Time-domain terahertz spectroscopy\\
 %TMM		& Transfer-matrix method  (numerical computation)\\
