--- a/theory.tex
+++ b/theory.tex
@@ -1245,10 +1245,11 @@ it could not become negative, since the effective permeability $\meff(\omega) > 
 
 %}}}
 \paragraph{Negative effective permeability and negative refractive index}  %{{{ ================== 
-% PK writes (where??) 
-% "The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true? 
-Although the literature is somewhat ambiguous, a thorough search shows that the term \textit{metamaterial} (MM) was first used by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before,  the new term of \textit{metamaterial} can be viewed as more fortunate as it does not imply whether the structure is man-made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
+The literature is somewhat ambiguous, but a thorough search shows that the term \textit{metamaterial} (MM) was first used by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before,  the new term of \textit{metamaterial} can be viewed as more fortunate as it does not imply whether the structure is man-made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
 
+It remains unclear whether there was an objective cause, or a semantic bias from the term \textit{artificial dielectrics} only, that the periodic structures with magnetic effects received less attention than those the with electric ones. Apparently the first theoretical study thereof  by Lewin \cite{lewin1947electrical} dates back to 1947, but the first realisations of split-ring resonator arrays and other magnetically resonant structures seem to be published no earlier than in 1980s. Further details can be found in the Results chapter on pp. \pageref{negn_srr} and \pageref{negn_diel}.
+
+% TODO add about history from SRRs and diel-spheres
 The research of artificial dielectrics, or newly, metamaterials, gained on significant popularity after the papers from 1999 by Pendry \cite{pendry1999magnetism} and from 2000 by Smith \cite{smith2000composite}. The former outlined how a negative index of refraction can be obtained in a structure composed of metallic wires introducing $\eeff<0$ and of small metallic loops, known as \textit{split-ring resonators} (SRR), introducing $\meff<0$. The latter paper described the experimental verification of negative refraction in the microwave range. Thousands of papers followed suite which covered different spectral ranges, demonstrated other MM designs, discussed theoretically when and how the metamaterial can be viewed as homogeneous, and sought for new applications. 
 
 %}}}
